<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background_login_activity"
    android:fillViewport="true"
    tools:context=".LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/linearLayout">

    <!-- Logo view -->
    <LinearLayout
        android:id="@+id/logo_section"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="90dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/logo"
            tools:text="Logo Image" />
    </LinearLayout>

    <!-- Company model view -->
    <LinearLayout
        android:id="@+id/company_model_section"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/company_and_image_view"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/company_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_marginBottom="4dp"
                android:text="@string/company_text" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:rotation="25"
                android:src="@drawable/triangle_icon" />
        </RelativeLayout>

        <TextView
            android:id="@+id/model_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="8dp"
            android:text="@string/model_text" />
    </LinearLayout>

    <!-- Login view -->
    <LinearLayout
        android:id="@+id/login_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/email_address_section"
            android:layout_width="244dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_shape">

            <EditText
                android:id="@+id/email_address_edit"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/email_image"
                android:layout_width="20dp"
                android:layout_alignParentStart="true"
                android:layout_height="20dp"
                android:layout_alignStart="@id/email_address_edit"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/mail_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_section"
            android:layout_width="244dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_shape">

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/password_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignStart="@id/password_edit"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/secure_icon" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button_shape"
            android:text="@string/action_login_button"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/forgot_password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/forgot_password"
            android:layout_marginTop="16dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/register_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_register"
            android:textAlignment="center"
            android:textColor="#ffa000"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>
</ScrollView>