<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepageLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".HomepageActivity">

    <TextView
    android:id="@+id/welcomeView"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:textStyle="bold"
    android:textAlignment="center"
    android:textAppearance="?android:textAppearanceMedium"/>

    <LinearLayout
        android:id="@+id/country_view"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/country_textView"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/country_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"/>
        <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:spinnerMode="dropdown">
        </Spinner>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/state_view"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/state_textView"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/state_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"/>
        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/city_view"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/city_textView"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/city_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"/>
        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:spinnerMode="dropdown">
        </Spinner>
    </LinearLayout>
</LinearLayout>